--- a/HeroArchitect/HeroArchitect.Web/Pages/Index.razor
+++ b/HeroArchitect/HeroArchitect.Web/Pages/Index.razor
@@ -1,10 +1,17 @@
 ﻿@page "/"
 @using HeroArchitect.Web.Domain.State
+@inject NavigationManager navigationManager
 @inject IStateContainer stateContainer
+@inject Session session
 
 <PageTitle>Welcome to the game</PageTitle>
 
-<h1>Welcome to Hero Architect, join or create a lobby</h1>
+<h1>Hello @session.Name, welcome to Hero Architect, join or create a lobby</h1>
+
+<br />
+<label for="username">Name:</label>
+<input id="username" type="text" @bind-value="session.Name" />
+
 
 <table>
 	<thead>
@@ -43,7 +50,8 @@
 
 	private void CreateLobby()
 	{
-		stateContainer.CreateLobby(newLobbyName, newMaxPlayers).JoinLobby(new Domain.User(Guid.NewGuid(), "abc"));
+		var lobby = stateContainer.CreateLobby(newLobbyName, newMaxPlayers).JoinLobby(new Domain.User(Guid.NewGuid(), "abc"));
+		navigationManager.NavigateTo($"/Lobby/{lobby.Id}");
 	}
 
 	private void JoinLobby(Guid lobbyId)
